--- a/5_latest_covid_cases.Rmd
+++ b/5_latest_covid_cases.Rmd
@@ -184,32 +184,34 @@ ppp_allvars_1022_unemploy_2 <- left_join(ppp_allvars_1022_unemploy,
 
 ```{r}
 test_regression <-
-  lm(ppp_allvars_1020_lockdowns$days_to_approval ~ 1 + ppp_allvars_1020_lockdowns$median_family_income +
-       ppp_allvars_1020_lockdowns$black_percent +
-       ppp_allvars_1020_lockdowns$white_percent + ppp_allvars_1020_lockdowns$high_school_pct +
-       ppp_allvars_1020_lockdowns$banks_per_pop + 
-       ppp_allvars_1020_lockdowns$loan_350_1mil + ppp_allvars_1020_lockdowns$loan_150_350 + 
-       ppp_allvars_1020_lockdowns$loan_5mil_10mil +
-       ppp_allvars_1020_lockdowns$loan_2mil_5mil + ppp_allvars_1020_lockdowns$loan_1mil_2mil +
-       ppp_allvars_1020_lockdowns$cook_pvi + ppp_allvars_1020_lockdowns$mean_start_cases_weighted + 
-       ppp_allvars_1020_lockdowns$mean_start_deaths_weighted + ppp_allvars_1020_lockdowns$mean_end_cases_weighted +
-       ppp_allvars_1020_lockdowns$mean_end_deaths_weighted + 
-       ppp_allvars_1020_lockdowns$bank_ppp_issued +
-       ppp_allvars_1020_lockdowns$rural + ppp_allvars_1020_lockdowns$number_of_establishments +
-       ppp_allvars_1020_lockdowns$married_percent + ppp_allvars_1020_lockdowns$preference +
-       ppp_allvars_1020_lockdowns$requirement + 
-       ppp_allvars_1020_lockdowns$stay_at_home_apr +
-       ppp_allvars_1020_lockdowns$stay_at_home_current +
-       ppp_allvars_1020_lockdowns$non_essential_closure_apr +
-       ppp_allvars_1020_lockdowns$non_essential_closure_current +
+  lm(ppp_allvars_1022_unemploy_2$days_to_approval ~ 1 + ppp_allvars_1022_unemploy_2$median_family_income +
+       ppp_allvars_1022_unemploy_2$black_percent +
+       ppp_allvars_1022_unemploy_2$white_percent + ppp_allvars_1022_unemploy_2$high_school_pct +
+       ppp_allvars_1022_unemploy_2$banks_per_pop + 
+       ppp_allvars_1022_unemploy_2$loan_350_1mil + ppp_allvars_1022_unemploy_2$loan_150_350 + 
+       ppp_allvars_1022_unemploy_2$loan_5mil_10mil +
+       ppp_allvars_1022_unemploy_2$loan_2mil_5mil + ppp_allvars_1022_unemploy_2$loan_1mil_2mil +
+       ppp_allvars_1022_unemploy_2$cook_pvi + ppp_allvars_1022_unemploy_2$mean_start_cases_weighted + 
+       ppp_allvars_1022_unemploy_2$mean_start_deaths_weighted + ppp_allvars_1022_unemploy_2$mean_end_cases_weighted +
+       ppp_allvars_1022_unemploy_2$mean_end_deaths_weighted + 
+       ppp_allvars_1022_unemploy_2$bank_ppp_issued +
+       ppp_allvars_1022_unemploy_2$rural + ppp_allvars_1022_unemploy_2$number_of_establishments +
+       ppp_allvars_1022_unemploy_2$married_percent + ppp_allvars_1022_unemploy_2$preference +
+       ppp_allvars_1022_unemploy_2$requirement + 
+       ppp_allvars_1022_unemploy_2$stay_at_home_apr +
+       ppp_allvars_1022_unemploy_2$stay_at_home_current +
+       ppp_allvars_1022_unemploy_2$non_essential_closure_apr +
+       ppp_allvars_1022_unemploy_2$non_essential_closure_current + 
+       ppp_allvars_1022_unemploy_2$unemployment_rate + 
+       ppp_allvars_1022_unemploy_2$unemployment_rate_apr + 
        
-       ppp_allvars_1020_lockdowns$black_percent * ppp_allvars_1020_lockdowns$preference +
-       ppp_allvars_1020_lockdowns$black_percent * ppp_allvars_1020_lockdowns$requirement + 
-       ppp_allvars_1020_lockdowns$black_percent * ppp_allvars_1020_lockdowns$loan_350_1mil +
-       ppp_allvars_1020_lockdowns$black_percent * ppp_allvars_1020_lockdowns$loan_150_350 +
-       ppp_allvars_1020_lockdowns$black_percent * ppp_allvars_1020_lockdowns$loan_1mil_2mil +
-       ppp_allvars_1020_lockdowns$black_percent * ppp_allvars_1020_lockdowns$loan_5mil_10mil +
-       ppp_allvars_1020_lockdowns$black_percent * ppp_allvars_1020_lockdowns$loan_5mil_10mil)
+       ppp_allvars_1022_unemploy_2$black_percent * ppp_allvars_1022_unemploy_2$preference +
+       ppp_allvars_1022_unemploy_2$black_percent * ppp_allvars_1022_unemploy_2$requirement + 
+       ppp_allvars_1022_unemploy_2$black_percent * ppp_allvars_1022_unemploy_2$loan_350_1mil +
+       ppp_allvars_1022_unemploy_2$black_percent * ppp_allvars_1022_unemploy_2$loan_150_350 +
+       ppp_allvars_1022_unemploy_2$black_percent * ppp_allvars_1022_unemploy_2$loan_1mil_2mil +
+       ppp_allvars_1022_unemploy_2$black_percent * ppp_allvars_1022_unemploy_2$loan_5mil_10mil +
+       ppp_allvars_1022_unemploy_2$black_percent * ppp_allvars_1022_unemploy_2$loan_5mil_10mil)
 
 summary(test_regression)
 ```
