--- a/5_latest_covid_cases.Rmd
+++ b/5_latest_covid_cases.Rmd
@@ -62,7 +62,7 @@ weighted_cases_current_6 <- weighted_cases_current_5 %>%
 
 
 ```{r merging}
-ppp_allvars_1024 <- left_join(ppp_allvars_1024, weighted_cases_current_6,
+ppp_allvars_1024 <- left_join(ppp_allvars_1024_marital, weighted_cases_current_6,
                               by = c("zip", "date_approved")) %>%
   drop_na(mean_end_cases_weighted, mean_end_deaths_weighted)
 
@@ -100,7 +100,7 @@ state_policies <- read_excel("raw_data/covid/7-30-2020_Social_Distancing.xlsx",
   mutate(stay_at_home_apr = replace_na(stay_at_home_apr, 0),
          non_essential_closure_apr = replace_na(non_essential_closure_apr, 0))
 
-states <- ppp_allvars_1020 %>%
+states <- ppp_allvars_1024 %>%
   select(cd_name, date_approved) %>%
   mutate(state_abb = str_sub(cd_name, 1, 2)) %>%
   mutate(state = abbr2state(state_abb))
@@ -122,7 +122,7 @@ states_merged_cleaned <- states_merged %>%
 
 
 ```{r}
-ppp_allvars_1020_lockdowns <- bind_cols(ppp_allvars_1020, states_merged_cleaned)
+ppp_allvars_1024_lockdowns <- bind_cols(ppp_allvars_1024, states_merged_cleaned)
 ```
 
 
@@ -164,10 +164,10 @@ unemploy_zip_dates <- unemploy_zip %>%
 
 ```{r}
 # Matching months
-ppp_months <- ppp_allvars_1020_lockdowns %>%
+ppp_months <- ppp_allvars_1024_lockdowns %>%
   mutate(month = month(date_approved))
 
-ppp_allvars_1022_unemploy <- left_join(ppp_months, unemploy_zip_dates, 
+ppp_allvars_1024_unemploy <- left_join(ppp_months, unemploy_zip_dates, 
                                        by = c("zip", "month"))
 
 unemploy_apr <- unemploy_zip_dates %>%
@@ -175,7 +175,7 @@ unemploy_apr <- unemploy_zip_dates %>%
   select(-total_labor, -total_unemployed, -period) %>%
   rename("unemployment_rate_apr" = "unemployment_rate")
 
-ppp_allvars_1022_unemploy_2 <- left_join(ppp_allvars_1022_unemploy,
+ppp_allvars_1024_unemploy_2 <- left_join(ppp_allvars_1024_unemploy,
                                          unemploy_apr, by = "zip") %>%
   select(-total_labor, -total_unemployed, -period) %>%
   drop_na(unemployment_rate, unemployment_rate_apr)
@@ -184,34 +184,34 @@ ppp_allvars_1022_unemploy_2 <- left_join(ppp_allvars_1022_unemploy,
 
 ```{r}
 test_regression <-
-  lm(ppp_allvars_1022_unemploy_2$days_to_approval ~ 1 + ppp_allvars_1022_unemploy_2$median_family_income +
-       ppp_allvars_1022_unemploy_2$black_percent +
-       ppp_allvars_1022_unemploy_2$white_percent + ppp_allvars_1022_unemploy_2$high_school_pct +
-       ppp_allvars_1022_unemploy_2$banks_per_pop + 
-       ppp_allvars_1022_unemploy_2$loan_350_1mil + ppp_allvars_1022_unemploy_2$loan_150_350 + 
-       ppp_allvars_1022_unemploy_2$loan_5mil_10mil +
-       ppp_allvars_1022_unemploy_2$loan_2mil_5mil + ppp_allvars_1022_unemploy_2$loan_1mil_2mil +
-       ppp_allvars_1022_unemploy_2$cook_pvi + ppp_allvars_1022_unemploy_2$mean_start_cases_weighted + 
-       ppp_allvars_1022_unemploy_2$mean_start_deaths_weighted + ppp_allvars_1022_unemploy_2$mean_end_cases_weighted +
-       ppp_allvars_1022_unemploy_2$mean_end_deaths_weighted + 
-       ppp_allvars_1022_unemploy_2$bank_ppp_issued +
-       ppp_allvars_1022_unemploy_2$rural + ppp_allvars_1022_unemploy_2$number_of_establishments +
-       ppp_allvars_1022_unemploy_2$married_percent + ppp_allvars_1022_unemploy_2$preference +
-       ppp_allvars_1022_unemploy_2$requirement + 
-       ppp_allvars_1022_unemploy_2$stay_at_home_apr +
-       ppp_allvars_1022_unemploy_2$stay_at_home_current +
-       ppp_allvars_1022_unemploy_2$non_essential_closure_apr +
-       ppp_allvars_1022_unemploy_2$non_essential_closure_current + 
-       ppp_allvars_1022_unemploy_2$unemployment_rate + 
-       ppp_allvars_1022_unemploy_2$unemployment_rate_apr + 
+  lm(ppp_allvars_1024_unemploy_2$days_to_approval ~ 1 + ppp_allvars_1024_unemploy_2$median_family_income +
+       ppp_allvars_1024_unemploy_2$black_percent +
+       ppp_allvars_1024_unemploy_2$white_percent + ppp_allvars_1024_unemploy_2$high_school_pct +
+       ppp_allvars_1024_unemploy_2$banks_per_pop + 
+       ppp_allvars_1024_unemploy_2$loan_350_1mil + ppp_allvars_1024_unemploy_2$loan_150_350 + 
+       ppp_allvars_1024_unemploy_2$loan_5mil_10mil +
+       ppp_allvars_1024_unemploy_2$loan_2mil_5mil + ppp_allvars_1024_unemploy_2$loan_1mil_2mil +
+       ppp_allvars_1024_unemploy_2$cook_pvi + ppp_allvars_1024_unemploy_2$mean_start_cases_weighted + 
+       ppp_allvars_1024_unemploy_2$mean_start_deaths_weighted + ppp_allvars_1024_unemploy_2$mean_end_cases_weighted +
+       ppp_allvars_1024_unemploy_2$mean_end_deaths_weighted + 
+       ppp_allvars_1024_unemploy_2$bank_ppp_issued +
+       ppp_allvars_1024_unemploy_2$rural + ppp_allvars_1024_unemploy_2$businesses_per_pop +
+       ppp_allvars_1024_unemploy_2$married_percent + ppp_allvars_1024_unemploy_2$preference +
+       ppp_allvars_1024_unemploy_2$requirement + 
+       ppp_allvars_1024_unemploy_2$stay_at_home_apr +
+       ppp_allvars_1024_unemploy_2$stay_at_home_current +
+       ppp_allvars_1024_unemploy_2$non_essential_closure_apr +
+       ppp_allvars_1024_unemploy_2$non_essential_closure_current + 
+       ppp_allvars_1024_unemploy_2$unemployment_rate + 
+       ppp_allvars_1024_unemploy_2$unemployment_rate_apr + 
        
-       ppp_allvars_1022_unemploy_2$black_percent * ppp_allvars_1022_unemploy_2$preference +
-       ppp_allvars_1022_unemploy_2$black_percent * ppp_allvars_1022_unemploy_2$requirement + 
-       ppp_allvars_1022_unemploy_2$black_percent * ppp_allvars_1022_unemploy_2$loan_350_1mil +
-       ppp_allvars_1022_unemploy_2$black_percent * ppp_allvars_1022_unemploy_2$loan_150_350 +
-       ppp_allvars_1022_unemploy_2$black_percent * ppp_allvars_1022_unemploy_2$loan_1mil_2mil +
-       ppp_allvars_1022_unemploy_2$black_percent * ppp_allvars_1022_unemploy_2$loan_5mil_10mil +
-       ppp_allvars_1022_unemploy_2$black_percent * ppp_allvars_1022_unemploy_2$loan_5mil_10mil)
+       ppp_allvars_1024_unemploy_2$black_percent * ppp_allvars_1024_unemploy_2$preference +
+       ppp_allvars_1024_unemploy_2$black_percent * ppp_allvars_1024_unemploy_2$requirement + 
+       ppp_allvars_1024_unemploy_2$black_percent * ppp_allvars_1024_unemploy_2$loan_350_1mil +
+       ppp_allvars_1024_unemploy_2$black_percent * ppp_allvars_1024_unemploy_2$loan_150_350 +
+       ppp_allvars_1024_unemploy_2$black_percent * ppp_allvars_1024_unemploy_2$loan_1mil_2mil +
+       ppp_allvars_1024_unemploy_2$black_percent * ppp_allvars_1024_unemploy_2$loan_5mil_10mil +
+       ppp_allvars_1024_unemploy_2$black_percent * ppp_allvars_1024_unemploy_2$loan_5mil_10mil)
 
 summary(test_regression)
 ```
